# interview-bolid-backend

./: .dockerignore  .env.example  .flake8  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: __main__.py
app/api/: __init__.py  base_schemas.py  handlers.py
app/api/events/: controller.py  repository.py  schemas.py  service.py
app/core/: errors.py  settings.py
app/db/: session.py
app/lib/: model_repository.py  repository.py
app/lib/entities/: event.py  mixins.py
app/script/: format_code.py  lint_code.py  migration.py  setup_preset.py  start_app.py
app/scripts/: format_code.py  lint_code.py
app/templates/: controller.py  index.html
migrations/: env.py  script.py.mako
migrations/versions/: cee907c7c199_define_table_events.py
