[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["novoseltcev <novoseltcev.stanislav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
jinja2 = "^3.1.2"
httpx = "^0.23.3"
sqlalchemy = {extras = ["async"], version = "^1.4.46"}
asyncpg = "^0.27.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
autoflake = "^2.0.0"

[tool.poetry.scripts]
app = "app.script.start_app:main"
lint = "app.script.lint_code:main"
format = "app.script.format_code:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
# Disallow untyped calls to functions with annotated types
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true
show_traceback = true
show_column_numbers = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
